<resources>
    <string name="app_name">SHP-Patient</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_next">Next</string>
    <string name="register_title">Register yourself:-</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_incorrect_credentials">You have entered the incorrect credentials.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_text_view">Please provide your valuable feedback:</string>
    <string name="feedback_submit_text">Submit</string>
    <string name="title_activity_details">Patient Details</string>


    <string name="action_settings">Settings</string>


    <!--Strings related to Logout dialog-->
    <string name="dialog_yes_button_text">Yes</string>
    <string name="dialog_no_button_text">No</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>

    <!--Strings related to Appointment  dialog-->
    <string name="appointment_dialog_title">Select Appointment Details</string>
    <string name="appointment_dialog_message">Please select appointment date and time</string>
    <string name="dialog_done_button_text">Done</string>
    <string name="dialog_cancel_button_text">Cancel</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_disease_title">Search Disease</string>
    <string name="search_disease_symptom_spinner_prompt">Select a symptom</string>
    <string name="search_doctor_title">Search Doctor</string>


    <string name="patient_id_text">User id: </string>
    <string name="patient_id_hint">User ID</string>

    <string name="patient_first_name_hint">Patient First Name</string>
    <string name="patient_last_name_hint">Patient Last Name</string>
    <string name="patient_age_hint">Age</string>
    <string name="patient_address_hint">Address</string>

    <string name="patient_gender_text">Gender: </string>
    <string name="patient_gender_male">Male</string>
    <string name="patient_gender_female">Female</string>

    <string name="patient_contact_hint">Contact</string>
    <string name="patient_mail_hint">E-mail</string>
    <string name="patient_password_hint">Password</string>
    <string name="patient_password_confirm_hint">Confirm your password</string>


    <!--Navigation drawer strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_my_details">My Details</string>
    <string name="nav_drawer_search_doctor">Search Doctor</string>
    <string name="nav_drawer_feedback">Feedback</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_drawer_appointments">My Appointments</string>

    <!--user picture seection dialog strings-->
    <string name="select_from_gallery">Select image from Gallery</string>
    <string name="capture_from_camera">Capture a photo</string>
    <string name="cancel">Cancel</string>

    <string name="submit_button">Done</string>
    <string name="name_hint">Name</string>
    <string name="register_patient_title">Register Patient</string>
    <string name="confirm_registration_title">Complete registration</string>


    <string name="disease_prediction">Disease Prediction</string>
    <string name="enter_a_symptom">Enter a symptom</string>
    <string name="symptom_select_tv">Please select a symptom from the drop-down.</string>
    <string name="selected_symptoms_text_view">Symptoms you select will appear here</string>
    <string name="list_of_doctors_tv">Recommended Doctor(s) for you :</string>
    <string name="list_of_diseases_tv">Predicted Disease(s) are:</string>
    <string name="disease_cell_name_tv">Disease Name:</string>
    <string name="disease_cell_type_tv">Disease Type:</string>
    <string name="disease_cell_id_tv">Disease ID:</string>
    <string name="doctor_cell_id_tv">Doctor ID:</string>
    <string name="doc_cell_name_tv">Name:</string>
    <string name="doc_cell_speciality_tv">Speciality:</string>
    <string name="dec_cell_hospital_name_tv">Hospital Name:</string>
    <string name="doc_cell_address_tv">Address:</string>
    <string name="doc_cell_city_tv">City:</string>
    <string name="doc_cell_mobile_number_tv">Mobile Number:</string>
    <string name="doc_cell_email_id_tv">Email ID:</string>
    <string name="book_appointment_btn_text">Book Appointment</string>
    <string name="search_disease_results_activity_title">Search Disease Results</string>
    <string name="enter_first_symptom_et">Enter a symptom</string>
    <string name="select_a_symptom_from_the_spinner_text">Select a symptom from the spinner</string>
    <string name="search_disease_next_btn">Next</string>
    <string name="selected_symptoms_title_tv">Symptoms you selected so far are:</string>


    <string name="select_parameter_search_doctor_tv_text">Select a parameter to search doctor: </string>
    <string name="search_doc_opt_type_name">Name</string>
    <string name="search_doc_opt_type_address">Address</string>
    <string name="search_doc_opt_type_category">Category</string>
    <string name="search_doc_submit_btn_text">Search</string>


    <string name="edit_details_cancel_btn_text">Cancel</string>
    <string name="edit_details_submit_btn_text">Update</string>
    <string name="edit_details_edit_btn_text">Edit</string>


    <!--shared preferences strings-->

    <string name="preferencesFileKey">SHP Preferences</string>
    <string name="pref_user_email_id_key">UserEmail</string>
    <string name="pref_user_pswd_key">UserPassword</string>
    <string name="pref_user_id_key">UserID</string>
    <string name="pref_user_logged_in_status">login</string>

    <!--shared preferences user details -->
    <string name="detail_name">user_detail_name</string>
    <string name="detail_contact">user_detail_contact</string>
    <string name="detail_email">user_detail_email</string>
    <string name="detail_address">user_detail_address</string>
    <string name="details_saved_to_preferences_flag">details_saved</string>
    <string name="appointment_patient_name_tv">Patient Name:</string>
    <string name="appointment_time_tv">Appointment Time:</string>
    <string name="appointment_cell_date_tv">Appointment Date:</string>
    <string name="appointment_cell_id_tv">Appointment ID:</string>
    <string name="appointment_info">Your appointments can be seen here</string>
    <string name="no_appcointments_view_text">No Appointments yet</string>
    <string name="title_my_appointments">My Appointments</string>

</resources>
