<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shardulpathak.shp_patient.RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/patient_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_id_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/patient_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="4"
            android:inputType="number"
            android:maxLength="20"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:hint="@string/patient_first_name_hint"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_last_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:hint="@string/patient_last_name_hint"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/age_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="3"
            android:hint="@string/patient_age_hint"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/address_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="25"
            android:hint="@string/patient_address_hint"
            android:inputType="textPostalAddress"
            android:maxLength="100"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/gender_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/patient_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_gender_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/patient_gender_value_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/male_gender_button"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_gender_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_gender_male" />

            <RadioButton
                android:id="@+id/female_gender_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_gender_female" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/register_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/action_register_next" />

</RelativeLayout>
