<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shardulpathak.shp_patient.SecondRegisterActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_contact_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="10"
            android:hint="@string/patient_contact_hint"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_email_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="25"
            android:hint="@string/patient_mail_hint"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_password_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="25"
            android:hint="@string/patient_password_hint"
            android:inputType="textPassword"
            android:maxLength="25"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/patient_password_confirm_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:ems="25"
            android:hint="@string/patient_password_confirm_hint"
            android:inputType="textPassword"
            android:maxLength="25"
            android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/action_register" />


</RelativeLayout>
